# my-pi-mono

./: .gitignore  CONTEXT.md  package-lock.json  package.json  tsconfig.json  vitest.config.ts
docs/adr/: 0001-node-spawn-session-manager.md  0004-switch-web-search-to-searxng.md  0005-r-plan-scoped-starting-point.md  0006-btw-child-fork-process.md  0007-web-fetch-semantic-container-first-extraction.md  0008-atomically-reveal-mutation-approval-cards.md
docs/spec/: 0001-subagent-visualization-redesign.md  0002-remove-tmux-complete-node-spawn.md  0003-subagent-activity-feed-reset.md  0004-agent-description-auto-load.md  0006-switch-web-search-to-searxng.md  0007-deep-research.md  0008-btw-async-side-question.md  0009-web-fetch-artifacts-raw-github-resources.md  0010-atomic-mutation-diff-reveal.md
docs/tickets/: 0001-test-command-handler-orchestration.md  0002-progress-indicator-for-deep-research-iterations.md  0003-error-recovery-and-resilience-in-the-loop.md  0006-dedup-tool-events.md  (+43 more)
extensions/web-search/: CONTEXT.md  index.test.ts  index.ts  pyproject.toml  readability-linkedom.spike.test.ts
extensions/web-search/scripts/: fetch.py  github.py  representation.py  search.py
extensions/web-search/scripts/tests/: conftest.py  test_fetch.py  test_github.py  test_representation.py  test_search.py
extensions/web-search/scripts/tests/fixtures/: github_readme.html  readthedocs_page.html
extensions/web-search/src/: fetch.test.ts  fetch.ts  github.test.ts  github.ts  index.ts  integration.test.ts  representation.test.ts  representation.ts  search.test.ts  search.ts
(+75 files in other folders)
