[project]
name = "pi-web-search"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "readability-lxml>=0.8.1",
    "markdownify>=0.13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-httpx>=0.30.0",
]

[tool.uv]
# Ensures uv creates a managed venv automatically.

[tool.pytest.ini_options]
testpaths = ["scripts/tests"]
pythonpath = ["scripts"]
